[package]
name = "load-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
bytes = "1.10.1"
clap = { version = "4.5.47", features = ["derive"] }
console = "0.16.1"
futures = "0.3.31"
indicatif = "0.18.0"
rand = "0.9.2"
reqwest = { version = "0.12.23", features = ["rustls-tls", "http2"] }
tokio = { version = "1.47.1", features = ["full"] }

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
