[package]
name = "load-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
bytes = "1.10.1"
clap = { version = "4.5.47", features = ["derive"] }
console = "0.16.1"
futures = "0.3.31"
indicatif = "0.18.0"
rand = "0.9.2"
reqwest = { version = "0.12.23", features = ["rustls-tls", "http2"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.225", features = ["derive"] }
base64 = "0.22.1"

[dev-dependencies]
assert_cmd = "2.0.17"
http-body-util = "0.1.3"
hyper = { version = "1.7.0", features = ["full"] }
hyper-util = "0.1.17"
predicates = "3.1.3"
rustls = { version = "0.23.32", features = ["aws-lc-rs"] }
rustls-pemfile = "2.2.0"
tokio-rustls = "0.26.4"
